feat: notfound middleware and docs examples
